# intent-aware-recommendation-system

./: .gitignore  .nojekyll  README.md  TODO.html  TODO.md  _quarto.yml  index.html  index.qmd  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: ci.yml  publish.yml
_site/: TODO.html  index.html  search.json  sitemap.xml
_site/docs/: elo7-ds-challenge-en.html  elo7-ds-challenge-pt.html
_site/notebooks/: 01_eda.html  01_exploratory_data_analysis.html  02_product_classification.html  03_search_intent_modeling.html  04_recommendation_engine.html  05_system_integration.html  06_evaluation.html
app/: README.md  cli.py
data/: README.md
data/processed/: 01_data.parquet  01_features.parquet  02_features.parquet  03_features.parquet  03_query_intent.parquet  04_features.parquet  04_product_vectors.npz  05_features.parquet
docs/: elo7-ds-challange-en.md  elo7-ds-challenge-en.html  elo7-ds-challenge-pt.html  elo7-ds-challenge-pt.md
models/: README.md
notebooks/: 01_eda.html  01_eda.ipynb  01_exploratory_data_analysis.html  01_exploratory_data_analysis.ipynb  02_product_classification.html  02_product_classification.ipynb  03_search_intent_modeling.html  03_search_intent_modeling.ipynb  04_recommendation_engine.html  04_recommendation_engine.ipynb  05_system_integration.html  05_system_integration.ipynb  06_evaluation.html  06_evaluation.ipynb  README.md
reports/: README.md
scripts/: publish.sh
site_libs/bootstrap/: bootstrap-25f096429ac5c484829caccbbf969864.min.css  bootstrap-3029e7e195d8e149f4708ed6e6ea6f46.min.css  (+2 more)
src/: pipeline.py
(+8 files in other folders)
